<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/library"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/layout_alltrack"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16sp"
        android:textSize="18sp"
        android:text="@string/all_track"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24_black"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/layout_laylist"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16sp"
        android:textSize="18sp"
        android:text="@string/playlist"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24_black"
        app:layout_constraintTop_toBottomOf="@+id/layout_alltrack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/layout_artist"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16sp"
        android:textSize="18sp"
        android:text="@string/artist"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24_black"
        app:layout_constraintTop_toBottomOf="@+id/layout_laylist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/recently"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/recently_play"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentlyView"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/recently"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>