<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/search"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edtSearch"
        android:hint="@string/search_song_artist"
        android:singleLine="true"
        android:background="@drawable/backgroud_search"
        android:imeOptions="actionSearch"
        android:backgroundTint="#DAF4EEEE"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_baseline_search_24_white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/noResult"
        android:visibility="gone"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/no_result"
        app:layout_constraintTop_toBottomOf="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>