<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/albumSpring"
                android:layout_marginStart="16sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:text="@string/home"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albums"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@+id/albumSpring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/charts"
                android:layout_marginStart="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:text="@string/charts"
                app:layout_constraintTop_toBottomOf="@+id/albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chartsView"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/charts"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/springPlaylist"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:text="@string/springPlaylist"
                app:layout_constraintTop_toBottomOf="@+id/chartsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlistView"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/springPlaylist"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>