<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24_black"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.musick.ViewSquareImage
                android:id="@+id/square_image"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cover"
                    android:background="@color/black"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.example.musick.ViewSquareImage>

            <TextView
                android:id="@+id/playlist_name"
                android:layout_marginTop="10dp"
                android:text="@string/playlist"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/square_image"
                app:layout_constraintLeft_toLeftOf="@+id/square_image"
                app:layout_constraintRight_toRightOf="@+id/square_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tracks"
                android:layout_marginTop="5dp"
                android:text="@string/artist"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/playlist_name"
                app:layout_constraintLeft_toLeftOf="@+id/square_image"
                app:layout_constraintRight_toRightOf="@+id/square_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracks"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tvZeroSong"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/add_song_playlist"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:text="@string/loading"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>