<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24_black"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/addSong"
                android:layout_marginEnd="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/add_song"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/layout_mini_player"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.musick.ViewSquareImage
                android:id="@+id/square_image"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cover"
                    android:background="@color/black"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.example.musick.ViewSquareImage>

            <TextView
                android:id="@+id/playlist_name"
                android:layout_marginTop="10dp"
                android:text="@string/playlist"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/square_image"
                app:layout_constraintLeft_toLeftOf="@+id/square_image"
                app:layout_constraintRight_toRightOf="@+id/square_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tracks"
                android:layout_marginTop="5dp"
                android:text="@string/artist"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/playlist_name"
                app:layout_constraintLeft_toLeftOf="@+id/square_image"
                app:layout_constraintRight_toRightOf="@+id/square_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracks"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tvZeroSong"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:text="@string/add_song_playlist"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_mini_player"
        android:background="#373535"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_main"
            android:layout_margin="8dp"
            android:src="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/songName_mini"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/all_track"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/center_view_mini"
            app:layout_constraintLeft_toRightOf="@+id/profile_image_main"
            app:layout_constraintRight_toLeftOf="@+id/play_mini_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/center_view_mini"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="1dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/artist_mini"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="#A8A4A4"
            android:text="@string/all_track"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/center_view_mini"
            app:layout_constraintLeft_toRightOf="@+id/profile_image_main"
            app:layout_constraintRight_toLeftOf="@+id/play_mini_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/play_mini_player"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/favorite_mini_player"
            android:background="@drawable/ic_baseline_play_arrow_24_white"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <View
            android:id="@+id/favorite_mini_player"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_baseline_favorite_24_white"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>